# flutter-test

./: .gitignore  .gitmodules  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/debug/: AndroidManifest.xml
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/: MainActivity.kt
app/lib/: gallery.dart  help.dart  main.dart
app/linux/: CMakeLists.txt  my_application.cc
lib/: wifiapp.dart  wifiapp_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  wifiapp.c  wifiapp.h
